--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
 [submodule "dist/mk"]
 	path = dist/mk
 	url = git@github.com:jlopez/air-mk.git
-[submodule "src/ios/ane"]
-	path = src/ios/ane
-	url = git@github.com:jlopez/ane-ios-helper.git
-[submodule "src/ios/fb"]
-	path = src/ios/fb
-	url = git://github.com/facebook/facebook-ios-sdk.git
+[submodule "lib/ane"]
+	path = lib/ane
+	url = git@github.com:mindjolt/ane-helper.git
