--- a/src/test/app.xml.in
+++ b/src/test/app.xml.in
@@ -43,6 +43,9 @@
         <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
         <uses-permission android:name="com.android.vending.BILLING"/>
         <application android:enabled="true" @ANDROID_DEBUGGABLE@>
+          <meta-data android:name="ANEDebug" android:value="true"/>
+          <meta-data android:name="SKProvider" android:value="@STORE_PROVIDER@"/>
+          <meta-data android:name="SKIdentity" android:value="@GOOGLE_IDENTITY@"/>
           <activity android:name="com.jesusla.ane.CustomActivity"/>
           <service android:name="com.jesusla.google.BillingService"/>
           <receiver android:name="com.jesusla.google.BillingReceiver">
